# judge_target_object

./: CMakeLists.txt  README.md  package.xml
action/: BoundingBox2D.action  BoundingBox3D.action  MaskBoundingBox2D.action
bash/: reset-judge-output.bash
launch/: judge_target_object.launch
msg/: BoundingBox2D.msg  BoundingBox3D.msg  MaskBoundingBox2D.msg
src/: __init__.py  detector_by_darknet_ros.py  get_object_image_camera.py  judge_target_object_capture_img.py  judge_target_object_cut_image.py  judge_target_object_main.py  judge_target_object_mlda.py  judge_target_object_mlda_image.py  judge_target_object_mlda_main.py  judge_target_object_mlda_word.py  judge_target_object_send_img.py  judge_target_object_yolov3.py  judge_target_object_yolov3_service.py  judge_target_object_yolov3_ver2.py  mlda_ros_data_image.py  mlda_ros_data_word.py  mlda_ros_learn.py  mlda_ros_main.py  sample.py  trial.py
src/data/bof/0/: codebook_0.txt  codebook_1.txt  codebook_2.txt  histgram_v_0.txt  histgram_v_1.txt  histgram_v_2.txt
src/data/bof/1/: codebook_0.txt  codebook_1.txt  codebook_2.txt  histgram_v_0.txt  histgram_v_1.txt  histgram_v_2.txt
src/data/bof/10/: codebook_0.txt
src/data/bof/2/: codebook_0.txt  codebook_1.txt  codebook_2.txt  histgram_v_0.txt  histgram_v_1.txt  histgram_v_2.txt
src/data/bof/3/: codebook_0.txt  codebook_1.txt  histgram_v_0.txt  histgram_v_1.txt
src/data/bof/4/: codebook_0.txt  codebook_1.txt  histgram_v_0.txt  histgram_v_1.txt
src/data/bof/5/: codebook_0.txt  codebook_1.txt  codebook_2.txt  histgram_v_0.txt  histgram_v_2.txt
src/data/bof/6/: codebook_0.txt  codebook_1.txt  histgram_v_0.txt  histgram_v_1.txt
src/data/bof/7/: codebook_0.txt  codebook_1.txt  histgram_v_0.txt  histgram_v_1.txt
src/data/estimate_result/0/: Pdz_0.txt  Pdz_1.txt  Pdz_2.txt  Pmdw[0]_0.txt  Pmdw[0]_1.txt  Pmdw[0]_2.txt  Pmdw[1]_0.txt  Pmdw[1]_1.txt  Pmdw[1]_2.txt  estimate_histogram_word_0.txt  estimate_word_0.txt  estimate_word_1.txt  estimate_word_2.txt  model_0.pickle  model_1.pickle  model_2.pickle
src/data/estimate_result/1/: Pdz_0.txt  Pdz_1.txt  Pdz_2.txt  Pmdw[0]_0.txt  Pmdw[0]_1.txt  Pmdw[0]_2.txt  Pmdw[1]_0.txt  Pmdw[1]_1.txt  Pmdw[1]_2.txt  estimate_histogram_word_0.txt  estimate_histogram_word_2.txt  estimate_word_0.txt  (+5 more)
src/nouse/: judge_target_object_yolov3.py
srv/: SendImageMLDA.srv
(+189 files in other folders)
