<?xml version="1.0"?>
<package format="2">
  <name>judge_target_object</name>
  <version>1.0.0</version>
  <description>The 'judge_target_object' provide identifing target object by using yolov3 and mlda.</description>

  <maintainer email="hasegawa.shoichi@em.ci.ritsumei.ac.jp">Shoichi Hasegawa</maintainer>
  <license>MIT</license>
  <url type="website">http://www.ritsumei.ac.jp/research/r-giro/eng/philosophy/</url>
  <author email="hasegawa.shoichi@em.ci.ritsumei.ac.jp">Shoichi Hasegawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>detect_object</depend>
  <depend>message_runtime</depend>
</package>
